crates/panache-parser/tests/snapshots/yaml__yaml_suite_7BUB.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 7BUB
input: "---\nhr:\n  - Mark McGwire\n  # Following node labeled SS\n  - &SS Sammy Sosa\nrbi:\n  - *SS # Subsequent occurrence\n  - Ken Griffey\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
