crates/panache-parser/tests/snapshots/yaml__yaml_suite_7FWL.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 7FWL
input: "!<tag:yaml.org,2002:str> foo :\n  !<!bar> baz\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
