crates/panache-parser/tests/snapshots/yaml__yaml_suite_7MNF.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 7MNF
input: "top1:\n  key1: val1\ntop2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@19..19]
