crates/panache-parser/tests/snapshots/yaml__yaml_suite_7TMG.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 7TMG
input: "---\n[ word1\n# comment\n, word2]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
