crates/panache-parser/tests/snapshots/yaml__yaml_suite_7W2P.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 7W2P
input: "? a\n? b\nc:\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
