crates/panache-parser/tests/snapshots/yaml__yaml_suite_7Z25.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 7Z25
input: "---\nscalar1\n...\nkey: value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
