crates/panache-parser/tests/snapshots/yaml__yaml_suite_82AN.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 82AN
input: "---word1\nword2\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
