crates/panache-parser/tests/snapshots/yaml__yaml_suite_8CWC.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 8CWC
input: "---\nkey ends with two colons::: value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
